# opentracing-pyzipkin

./: README.rst  requirements.txt  setup.cfg  tox.ini
opentracing_pyzipkin/: span.py  tracer.py
opentracing_pyzipkin/tests/unit/: test_tracer.py
