[metadata]
name = opentracing-pyzipkin
summary = Opentracing implementation for python + zipkin
description-file =
    README.rst
author = Gregory Haynes <greg@greghaynes.net>
author-email = greg@greghaynes.net
classifier =
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    opentracing_pyzipkin

[wheel]
universal = 1
